feat(authservice): implement AuthService and its test
